[package]
name = "typecat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

toml = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
pest = "2.0"
pest_derive = "2.0"
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "typecat"
path = "src/lib.rs"
