[package]
name = "typecat"
version = "0.1.0"
edition = "2021"
authors = [
    "Jae-Hwan Chung <dialektike@gmail.com>",
    "Jess <dev.bearabbit@gmail.com>",
]
exclude = ["/docs"] #crates.io에 업로드할 때 제외할 파일

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

toml = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
pest = "2.0"
pest_derive = "2.0"
clap = { version = "4.0", features = ["derive"] }
glob = "0.3.1"
printpdf = "0.7.0"
thiserror = "1.0"

file_manager = { path = "file_manager" }

[lib]
name = "typecat"
path = "src/lib.rs"

[workspace]

members = [
    "file_manager",
]